{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 377,
  "lineage": "f3e5e275-f60d-becc-4473-a0297c01b79d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:vpc/vpc-07c7f6104ea4eeb60",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b265a639de3097f9",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b1246d8528e2a47f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c7f6104ea4eeb60",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07fc340347e240270",
            "owner_id": "971422717446"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-0158fa1aeae6bbb89",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0158fa1aeae6bbb89",
            "ingress": [],
            "name": "hutch-learntrac-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-lambda-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-lambda-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-0456074f9f3016cdf",
            "description": "Security group for hutch learntrac RDS instance - dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0456074f9f3016cdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "162.206.172.65/32"
                ],
                "description": "PostgreSQL access from developer IP",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "hutch-learntrac-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-rds-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-rds-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_app_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-0c8755b3db3808a42",
            "description": "Security group for application layer RDS access",
            "egress": [],
            "id": "sg-0c8755b3db3808a42",
            "ingress": [],
            "name": "hutch-learntrac-dev-rds-app-sg",
            "name_prefix": "",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-rds-app-access",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-rds-app-access",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-00960c1c47062ad68",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00960c1c47062ad68",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis access from ECS services",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035e0decc36b18df0",
                  "sg-099f0e67fcf8b6870"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "hutch-learntrac-dev-redis-sg20250723020246144000000010",
            "name_prefix": "hutch-learntrac-dev-redis-sg",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-redis-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-redis-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_security_group.alb",
            "module.learntrac_service.aws_security_group.ecs_tasks",
            "module.trac_service.aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-0a93db0ab05f5b9e0",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a93db0ab05f5b9e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Allow HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hutch-learntrac-dev-vpc-endpoints-sg20250723193429972400000002",
            "name_prefix": "hutch-learntrac-dev-vpc-endpoints-sg",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-vpc-endpoints-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-vpc-endpoints-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL access from ECS tasks",
            "from_port": 5432,
            "id": "sgrule-1908787847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0456074f9f3016cdf",
            "security_group_rule_id": "sgr-012ef68b1d447f719",
            "self": false,
            "source_security_group_id": "sg-099f0e67fcf8b6870",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "data.aws_vpc.default",
            "module.alb.aws_security_group.alb",
            "module.trac_service.aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_ecs_learntrac",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL access from LearnTrac API ECS service",
            "from_port": 5432,
            "id": "sgrule-288379956",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0456074f9f3016cdf",
            "security_group_rule_id": "sgr-022b30b5d4ca1c61a",
            "self": false,
            "source_security_group_id": "sg-035e0decc36b18df0",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "data.aws_vpc.default",
            "module.alb.aws_security_group.alb",
            "module.learntrac_service.aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "PostgreSQL access from Lambda functions",
            "from_port": 5432,
            "id": "sgrule-62085859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0456074f9f3016cdf",
            "security_group_rule_id": "sgr-0fc7cfce5fff3ad2f",
            "self": false,
            "source_security_group_id": "sg-0158fa1aeae6bbb89",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.rds",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:vpc-endpoint/vpce-0746a70568a4c9bb0",
            "dns_entry": [
              {
                "dns_name": "vpce-0746a70568a4c9bb0-qqo8ltgj.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0746a70568a4c9bb0-qqo8ltgj-us-east-2c.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0746a70568a4c9bb0-qqo8ltgj-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0746a70568a4c9bb0-qqo8ltgj-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0680056GNNDNTYRVO28"
              },
              {
                "dns_name": "ecr.us-east-2.api.aws",
                "hosted_zone_id": "Z0264847DZ0TQVQMRKQF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0746a70568a4c9bb0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02f3b8528ef9adc81",
              "eni-04210ef9631f5c04f",
              "eni-08d90d67c2bc3c429"
            ],
            "owner_id": "971422717446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a93db0ab05f5b9e0"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.19.51",
                "subnet_id": "subnet-03260fcd9c243f7b8"
              },
              {
                "ipv4": "172.31.38.252",
                "subnet_id": "subnet-068fcd2e51c94a130"
              },
              {
                "ipv4": "172.31.8.214",
                "subnet_id": "subnet-03595b890b049b697"
              }
            ],
            "subnet_ids": [
              "subnet-03260fcd9c243f7b8",
              "subnet-03595b890b049b697",
              "subnet-068fcd2e51c94a130"
            ],
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-ecr-api-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-ecr-api-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:vpc-endpoint/vpce-09b67d1fb931339e7",
            "dns_entry": [
              {
                "dns_name": "vpce-09b67d1fb931339e7-gfblf3ih.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-09b67d1fb931339e7-gfblf3ih-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-09b67d1fb931339e7-gfblf3ih-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-09b67d1fb931339e7-gfblf3ih-us-east-2c.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z02640091XJ0R7LJBYNFR"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z02640091XJ0R7LJBYNFR"
              },
              {
                "dns_name": "dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z06827152U0RBO9ODYOC1"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z06827152U0RBO9ODYOC1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09b67d1fb931339e7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02bf69ea77573f369",
              "eni-0c3e12c43984ea776",
              "eni-0e638f31ab80bcfa4"
            ],
            "owner_id": "971422717446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a93db0ab05f5b9e0"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.17.237",
                "subnet_id": "subnet-03260fcd9c243f7b8"
              },
              {
                "ipv4": "172.31.34.73",
                "subnet_id": "subnet-068fcd2e51c94a130"
              },
              {
                "ipv4": "172.31.6.199",
                "subnet_id": "subnet-03595b890b049b697"
              }
            ],
            "subnet_ids": [
              "subnet-03260fcd9c243f7b8",
              "subnet-03595b890b049b697",
              "subnet-068fcd2e51c94a130"
            ],
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-ecr-dkr-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-ecr-dkr-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:vpc-endpoint/vpce-0408721097ea7344a",
            "dns_entry": [
              {
                "dns_name": "vpce-0408721097ea7344a-noy8uxoy.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0408721097ea7344a-noy8uxoy-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0408721097ea7344a-noy8uxoy-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0408721097ea7344a-noy8uxoy-us-east-2c.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z02657746IKWDNF2SB7E"
              },
              {
                "dns_name": "logs.us-east-2.api.aws",
                "hosted_zone_id": "Z02657753ANAKEY4GO9G8"
              },
              {
                "dns_name": "streaming-logs.us-east-2.api.aws",
                "hosted_zone_id": "Z02657623E9T7HM8D0IUO"
              },
              {
                "dns_name": "streaming-logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z06809992I3GNVVMDXV5E"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0408721097ea7344a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-003d3e6a7aa66e6b1",
              "eni-06640fe8946584247",
              "eni-0d76b15fd272b35ab"
            ],
            "owner_id": "971422717446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a93db0ab05f5b9e0"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.27.44",
                "subnet_id": "subnet-03260fcd9c243f7b8"
              },
              {
                "ipv4": "172.31.45.177",
                "subnet_id": "subnet-068fcd2e51c94a130"
              },
              {
                "ipv4": "172.31.7.83",
                "subnet_id": "subnet-03595b890b049b697"
              }
            ],
            "subnet_ids": [
              "subnet-03260fcd9c243f7b8",
              "subnet-03595b890b049b697",
              "subnet-068fcd2e51c94a130"
            ],
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-logs-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-logs-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:vpc-endpoint/vpce-0b31d28d040f1b1b5",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-0b31d28d040f1b1b5",
            "owner_id": "971422717446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07fc340347e240270"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-s3-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-s3-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "dependencies": [
            "data.aws_route_tables.all",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secrets_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:vpc-endpoint/vpce-0b80309cf4a00bcb6",
            "dns_entry": [
              {
                "dns_name": "vpce-0b80309cf4a00bcb6-0r320lbn.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0b80309cf4a00bcb6-0r320lbn-us-east-2c.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0b80309cf4a00bcb6-0r320lbn-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0b80309cf4a00bcb6-0r320lbn-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z06810138603IUIVOMJG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b80309cf4a00bcb6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0946033e0f481131b",
              "eni-09fb1061341d93b5f",
              "eni-0c0d16ec8f5d52c84"
            ],
            "owner_id": "971422717446",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a93db0ab05f5b9e0"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.11.180",
                "subnet_id": "subnet-03595b890b049b697"
              },
              {
                "ipv4": "172.31.31.159",
                "subnet_id": "subnet-03260fcd9c243f7b8"
              },
              {
                "ipv4": "172.31.39.188",
                "subnet_id": "subnet-068fcd2e51c94a130"
              }
            ],
            "subnet_ids": [
              "subnet-03260fcd9c243f7b8",
              "subnet-03595b890b049b697",
              "subnet-068fcd2e51c94a130"
            ],
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-secrets-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-secrets-endpoint",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:loadbalancer/app/hutch-learntrac-dev-alb/9480bff7980f0221",
            "arn_suffix": "app/hutch-learntrac-dev-alb/9480bff7980f0221",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hutch-learntrac-dev-alb-1826735098.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:loadbalancer/app/hutch-learntrac-dev-alb/9480bff7980f0221",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hutch-learntrac-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dd68cf422d946e23"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03260fcd9c243f7b8"
              },
              {
                "subnet_id": "subnet-03595b890b049b697"
              },
              {
                "subnet_id": "subnet-068fcd2e51c94a130"
              }
            ],
            "subnets": [
              "subnet-03260fcd9c243f7b8",
              "subnet-03595b890b049b697",
              "subnet-068fcd2e51c94a130"
            ],
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-alb",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-alb",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "vpc_id": "vpc-07c7f6104ea4eeb60",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Welcome to TracLearn",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:loadbalancer/app/hutch-learntrac-dev-alb/9480bff7980f0221",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.alb.aws_lb.main",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "learntrac_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/learn-20250723020239949000000008/3df768b60d0ddf2f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/4257dd0062091142",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/analytics/*",
                      "/api/chat/*",
                      "/api/learntrac/*",
                      "/api/voice/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/4257dd0062091142",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685",
            "priority": 90,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.learntrac",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static_assets_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/trac-20250723020239921900000007/a3b286509815034a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/638bb56d020262d0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*.css",
                      "*.js",
                      "*.png",
                      "/chrome/*",
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/638bb56d020262d0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685",
            "priority": 80,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.trac",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static_assets_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/trac-20250723020239921900000007/a3b286509815034a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/803900dabe72337a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*.ico",
                      "*.jpg"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/803900dabe72337a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685",
            "priority": 81,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.trac",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "trac_paths_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/trac-20250723020239921900000007/a3b286509815034a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/b4003e334b42d6bb",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/roadmap/*",
                      "/ticket/*",
                      "/timeline/*",
                      "/trac/*",
                      "/wiki/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/b4003e334b42d6bb",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.trac",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "trac_paths_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/trac-20250723020239921900000007/a3b286509815034a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/fdab57bfcd18e066",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/attachment/*",
                      "/browser/*",
                      "/changeset/*",
                      "/login",
                      "/logout"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener-rule/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685/fdab57bfcd18e066",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:listener/app/hutch-learntrac-dev-alb/9480bff7980f0221/e380beeb5e440685",
            "priority": 101,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.trac",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "learntrac",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/learn-20250723020239949000000008/3df768b60d0ddf2f",
            "arn_suffix": "targetgroup/learn-20250723020239949000000008/3df768b60d0ddf2f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/learntrac/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/learn-20250723020239949000000008/3df768b60d0ddf2f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:971422717446:loadbalancer/app/hutch-learntrac-dev-alb/9480bff7980f0221"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "learn-20250723020239949000000008",
            "name_prefix": "learn-",
            "port": 8001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-learntrac-tg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-learntrac-tg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "trac",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/trac-20250723020239921900000007/a3b286509815034a",
            "arn_suffix": "targetgroup/trac-20250723020239921900000007/a3b286509815034a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/trac/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:971422717446:targetgroup/trac-20250723020239921900000007/a3b286509815034a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:971422717446:loadbalancer/app/hutch-learntrac-dev-alb/9480bff7980f0221"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "trac-20250723020239921900000007",
            "name_prefix": "trac-",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-trac-tg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-trac-tg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-0dd68cf422d946e23",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd68cf422d946e23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hutch-learntrac-dev-alb-sg20250723020239950300000009",
            "name_prefix": "hutch-learntrac-dev-alb-sg",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-alb-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-alb-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.learntrac_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-035e0decc36b18df0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035e0decc36b18df0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd68cf422d946e23"
                ],
                "self": false,
                "to_port": 8001
              }
            ],
            "name": "hutch-learntrac-dev-learntrac-ecs-tasks-sg2025072302024317800000000f",
            "name_prefix": "hutch-learntrac-dev-learntrac-ecs-tasks-sg",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-learntrac-ecs-tasks-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-learntrac-ecs-tasks-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.trac_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:971422717446:security-group/sg-099f0e67fcf8b6870",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099f0e67fcf8b6870",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd68cf422d946e23"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "hutch-learntrac-dev-trac-ecs-tasks-sg2025072302024317650000000e",
            "name_prefix": "hutch-learntrac-dev-trac-ecs-tasks-sg",
            "owner_id": "971422717446",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-trac-ecs-tasks-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "tags_all": {
              "CreatedDate": "2025-07-22",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hutch-learntrac-dev-trac-ecs-tasks-sg",
              "Owner": "hutch",
              "OwnerEmail": "hutchenbach@gmail.com",
              "Project": "learntrac"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c7f6104ea4eeb60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}